Add review comparison and strategy ports
Introduce a review comparison service to diff stored review runs by joiners, leavers, ranks, and weights, with new tests including a performance smoke test. The change also starts decoupling methodology and persistence concerns by adding strategy/repository ports, deriving methodology config from `IndexDefinition`, and switching composition imports to use the default enabled index definition.