@@ -13,7 +13,6 @@ import com.six.indexreview.infrastructure.csv.SecurityDataRow;
 import com.six.indexreview.infrastructure.csv.SpiUniverseCsvReader;
 import com.six.indexreview.infrastructure.csv.SpiUniverseRow;
 import com.six.indexreview.infrastructure.persistence.entity.IndexCompositionEntity;
-import com.six.indexreview.infrastructure.persistence.entity.MarketDataEntity;
 import com.six.indexreview.infrastructure.persistence.entity.SecurityEntity;
 import com.six.indexreview.infrastructure.persistence.entity.SpiUniverseMemberEntity;
 import com.six.indexreview.infrastructure.persistence.repository.IndexCompositionRepository;
@@ -25,18 +24,20 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.mock.web.MockMultipartFile;
+import org.mockito.ArgumentCaptor;
 
 import java.math.BigDecimal;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
+import java.time.Month;
 import java.util.List;
-import java.util.stream.StreamSupport;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentCaptor.forClass;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.*;
-import org.mockito.ArgumentCaptor;
 
 @SpringBootTest(classes = CsvImportService.class)
 class CsvImportServiceTest {
@@ -68,8 +69,8 @@ class CsvImportServiceTest {
     private IndexDefinitionProvider indexDefinitionProvider;
 
     @Test
-    void importSpiUniverseDeduplicatesIdenticalRowsAndPersistsMissingSecurities() throws Exception {
-        var date = LocalDate.of(2026, 9, 1);
+    void importSpiUniverseDeduplicatesIdenticalRowsAndPersistsMissingSecurities() {
+        LocalDate date = LocalDate.of(2026, Month.SEPTEMBER, 1);
         when(spiUniverseCsvReader.read(any(), any())).thenReturn(List.of(
                 new SpiUniverseRow(date, new SecurityId(1)),
                 new SpiUniverseRow(date, new SecurityId(1)),
@@ -83,25 +84,27 @@ class CsvImportServiceTest {
         assertThat(result.storedRows()).isEqualTo(2);
         assertThat(result.deduplicatedRows()).isEqualTo(1);
         verify(spiUniverseRepository).deleteAllInBatch();
-        ArgumentCaptor<List<SpiUniverseMemberEntity>> spiCaptor = ArgumentCaptor.forClass(List.class);
+        @SuppressWarnings("unchecked")
+        ArgumentCaptor<List<SpiUniverseMemberEntity>> spiCaptor = (ArgumentCaptor<List<SpiUniverseMemberEntity>>) (ArgumentCaptor<?>) forClass(List.class);
         verify(spiUniverseRepository).saveAll(spiCaptor.capture());
         assertThat(spiCaptor.getValue()).hasSize(2);
         assertThat(spiCaptor.getValue().stream().map(SpiUniverseMemberEntity::getSecurityId).toList()).containsExactly(1, 2);
 
-        ArgumentCaptor<List<SecurityEntity>> securityCaptor = ArgumentCaptor.forClass(List.class);
+        @SuppressWarnings("unchecked")
+        ArgumentCaptor<List<SecurityEntity>> securityCaptor = (ArgumentCaptor<List<SecurityEntity>>) (ArgumentCaptor<?>) forClass(List.class);
         verify(securityRepository).saveAll(securityCaptor.capture());
         assertThat(securityCaptor.getValue()).hasSize(1);
-        assertThat(securityCaptor.getValue().get(0).getId()).isEqualTo(2);
+        assertThat(securityCaptor.getValue().getFirst().getId()).isEqualTo(2);
     }
 
     @Test
-    void importSecurityDataRejectsConflictingDuplicateRows() throws Exception {
-        var date = LocalDate.of(2026, 9, 1);
+    void importSecurityDataRejectsConflictingDuplicateRows() {
+        LocalDate date = LocalDate.of(2026, Month.SEPTEMBER, 1);
         when(securityDataCsvReader.read(any(), any())).thenReturn(List.of(
                 new SecurityDataRow(new SecurityId(1), date, new BigDecimal("10"), new BigDecimal("0.5"), new BigDecimal("100")),
                 new SecurityDataRow(new SecurityId(1), date, new BigDecimal("11"), new BigDecimal("0.5"), new BigDecimal("100"))));
 
-        assertThatThrownBy(() -> csvImportService.importSecurityData(file("security-data.csv", "x")))
+        assertThatThrownBy(() -> csvImportService.importSecurityData(new MockMultipartFile("file", "security-data.csv", "text/csv", "x".getBytes(StandardCharsets.UTF_8))))
                 .isInstanceOf(DataImportException.class)
                 .hasMessageContaining("Conflicting duplicate market data row");
         verifyNoInteractions(marketDataRepository);
@@ -109,15 +112,16 @@ class CsvImportServiceTest {
     }
 
     @Test
-    void importCompositionUsesConfiguredDefinitionAndSelfDelegatingVariantWorks() throws Exception {
+    void importCompositionUsesConfiguredDefinitionAndSelfDelegatingVariantWorks() {
         var definition = new IndexDefinition(new IndexCode("SMI"), "Swiss Market Index", 20, new BigDecimal("0.18"),
                 "FFMCAP", "TOP_N", "NONE", "Q3-2026",
-                new ReviewDates(LocalDate.of(2026, 9, 10), LocalDate.of(2026, 9, 21)), List.of("SECURITY_ID_ASC"), true, 0);
-        when(indexDefinitionProvider.get("SMI", "Q3-2026")).thenReturn(definition);
-        when(compositionCsvReader.read(any(), any())).thenReturn(List.of(
+                new ReviewDates(LocalDate.of(2026, Month.SEPTEMBER, 10), LocalDate.of(2026, Month.SEPTEMBER, 21)), List.of("SECURITY_ID_ASC"), true, 0);
+        when(indexDefinitionProvider.defaultDefinition()).thenReturn(definition);
+        var compositionRows = List.of(
                 new CompositionRow(new SecurityId(10)),
                 new CompositionRow(new SecurityId(10)),
-                new CompositionRow(new SecurityId(11))));
+                new CompositionRow(new SecurityId(11)));
+        when(compositionCsvReader.read(any(), any())).thenReturn(compositionRows);
         when(securityRepository.findAllById(anyList())).thenReturn(List.of());
 
         var result = csvImportService.importComposition(file("composition.csv", "x"));
@@ -127,24 +131,26 @@ class CsvImportServiceTest {
         assertThat(result.storedRows()).isEqualTo(2);
         assertThat(result.deduplicatedRows()).isEqualTo(1);
         verify(indexCompositionRepository).deleteByIndexCodeAndReviewPeriod("SMI", "Q3-2026");
-        ArgumentCaptor<List<IndexCompositionEntity>> compositionCaptor = ArgumentCaptor.forClass(List.class);
+        @SuppressWarnings("unchecked")
+        ArgumentCaptor<List<IndexCompositionEntity>> compositionCaptor = (ArgumentCaptor<List<IndexCompositionEntity>>) (ArgumentCaptor<?>) forClass(List.class);
         verify(indexCompositionRepository).saveAll(compositionCaptor.capture());
         assertThat(compositionCaptor.getValue()).hasSize(2);
         assertThat(compositionCaptor.getValue().stream().map(IndexCompositionEntity::getSecurityId).toList()).containsExactly(10, 11);
 
-        ArgumentCaptor<List<SecurityEntity>> compositionSecurityCaptor = ArgumentCaptor.forClass(List.class);
+        @SuppressWarnings("unchecked")
+        ArgumentCaptor<List<SecurityEntity>> compositionSecurityCaptor = (ArgumentCaptor<List<SecurityEntity>>) (ArgumentCaptor<?>) forClass(List.class);
         verify(securityRepository).saveAll(compositionSecurityCaptor.capture());
         assertThat(compositionSecurityCaptor.getValue()).hasSize(2);
         assertThat(compositionSecurityCaptor.getValue().stream().map(SecurityEntity::getId).toList()).containsExactly(10, 11);
     }
 
     @Test
-    void importAllCombinesTheThreeImportResults() throws Exception {
-        when(spiUniverseCsvReader.read(any(), any())).thenReturn(List.of(new SpiUniverseRow(LocalDate.of(2026, 9, 1), new SecurityId(1))));
-        when(securityDataCsvReader.read(any(), any())).thenReturn(List.of(new SecurityDataRow(new SecurityId(1), LocalDate.of(2026, 9, 1), new BigDecimal("10"), new BigDecimal("0.5"), new BigDecimal("100"))));
-        when(indexDefinitionProvider.get("SMI", "Q3-2026")).thenReturn(new IndexDefinition(new IndexCode("SMI"), "Swiss Market Index", 20,
+    void importAllCombinesTheThreeImportResults() {
+        when(spiUniverseCsvReader.read(any(), any())).thenReturn(List.of(new SpiUniverseRow(LocalDate.of(2026, Month.SEPTEMBER, 1), new SecurityId(1))));
+        when(securityDataCsvReader.read(any(), any())).thenReturn(List.of(new SecurityDataRow(new SecurityId(1), LocalDate.of(2026, Month.SEPTEMBER, 1), new BigDecimal("10"), new BigDecimal("0.5"), new BigDecimal("100"))));
+        when(indexDefinitionProvider.defaultDefinition()).thenReturn(new IndexDefinition(new IndexCode("SMI"), "Swiss Market Index", 20,
                 new BigDecimal("0.18"), "FFMCAP", "TOP_N", "NONE", "Q3-2026",
-                new ReviewDates(LocalDate.of(2026, 9, 10), LocalDate.of(2026, 9, 21)), List.of(), true, 0));
+                new ReviewDates(LocalDate.of(2026, Month.SEPTEMBER, 10), LocalDate.of(2026, Month.SEPTEMBER, 21)), List.of(), true, 0));
         when(compositionCsvReader.read(any(), any())).thenReturn(List.of(new CompositionRow(new SecurityId(1))));
         when(securityRepository.findAllById(anyList())).thenReturn(List.of());
 
